complete api crud banner & ticket
