# src/docs/swagger_output.json
@@ -127,14 +127,40 @@
     },
     "/banners": {
       "post": {
+        "tags": [
+          "Banners"
+        ],
         "description": "",
         "responses": {
           "default": {
             "description": ""
           }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateBannerRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateBannerRequest"
+              }
+            }
+          }
         }
       },
       "get": {
+        "tags": [
+          "Banners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -168,6 +194,9 @@
     },
     "/banners/{id}": {
       "get": {
+        "tags": [
+          "Banners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -186,6 +215,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Banners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -200,10 +232,33 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateBannerRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateBannerRequest"
+              }
+            }
           }
         }
       },
       "delete": {
+        "tags": [
+          "Banners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -219,19 +274,50 @@
           "default": {
             "description": ""
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ]
       }
     },
     "/tickets": {
       "post": {
+        "tags": [
+          "Tickets"
+        ],
         "description": "",
         "responses": {
           "default": {
             "description": ""
           }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTicketRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTicketRequest"
+              }
+            }
+          }
         }
       },
       "get": {
+        "tags": [
+          "Tickets"
+        ],
         "description": "",
         "parameters": [
           {
@@ -265,6 +351,9 @@
     },
     "/tickets/{id}": {
       "get": {
+        "tags": [
+          "Tickets"
+        ],
         "description": "",
         "parameters": [
           {
@@ -283,6 +372,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Tickets"
+        ],
         "description": "",
         "parameters": [
           {
@@ -297,10 +389,33 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTicketRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTicketRequest"
+              }
+            }
           }
         }
       },
       "delete": {
+        "tags": [
+          "Banners"
+        ],
         "description": "",
         "parameters": [
           {
@@ -316,11 +431,19 @@
           "default": {
             "description": ""
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ]
       }
     },
     "/tickets/{eventId}/events": {
       "get": {
+        "tags": [
+          "Tickets"
+        ],
         "description": "",
         "parameters": [
           {
@@ -1041,6 +1164,54 @@
         },
         "xml": {
           "name": "RemoveMediaRequest"
+        }
+      },
+      "CreateBannerRequest": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "example": "Slipknot Concert"
+          },
+          "image": {
+            "type": "string",
+            "example": "https://res.cloudinary.com/dsabcs3bo/image/upload/v1769606677/cuvrlae4ndmgx2ztbifl.jpg"
+          },
+          "isShow": {
+            "type": "boolean",
+            "example": true
+          }
+        },
+        "xml": {
+          "name": "CreateBannerRequest"
+        }
+      },
+      "CreateTicketRequest": {
+        "type": "object",
+        "properties": {
+          "price": {
+            "type": "number",
+            "example": 500
+          },
+          "name": {
+            "type": "string",
+            "example": "Ticket common"
+          },
+          "events": {
+            "type": "string",
+            "example": "69787450244a8dc994fef5d3"
+          },
+          "description": {
+            "type": "string",
+            "example": "cheap one"
+          },
+          "quantity": {
+            "type": "number",
+            "example": 10000
+          }
+        },
+        "xml": {
+          "name": "CreateTicketRequest"
         }
       }
     }
