# src/routes/api.ts
@@ -18,15 +18,11 @@ router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
 router.post("/auth/activation", authController.activation);
 
-/* BANNER*/
-
 router.post(
   "/banners",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.create,
-);
-
-/*
+  /*
    #swagger.tags = ['Banners']
    #swagger.security = [{
     "bearerAuth":{}
@@ -38,25 +34,26 @@ router.post(
     }
    }
    */
-router.get("/banners", bannerController.findAll);
-
-/* 
+);
+router.get(
+  "/banners",
+  bannerController.findAll,
+  /* 
 #swagger.tags = ['Banners']
 */
-
-router.get("/banners/:id", bannerController.findOne);
-
-/* 
+);
+router.get(
+  "/banners/:id",
+  bannerController.findOne,
+  /* 
 #swagger.tags = ['Banners']
 */
-
+);
 router.put(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.update,
-);
-
-/*
+  /*
    #swagger.tags = ['Banners']
    #swagger.security = [{
     "bearerAuth":{}
@@ -68,29 +65,52 @@ router.put(
     }
    }
    */
-
+);
 router.delete(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.remove,
+  /*
+  #swagger.tags = ['Banners']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
 );
 
-/*
-  #swagger.tags = ['Banners']
-  #swagger.security = [{
-    "bearerAuth": {}
-  }]
-  */
-
-/* TICKET*/
-
-router.post("/tickets", [
-  authMiddleware,
-  aclMiddleware([ROLES.ADMIN]),
-  ticketController.create,
-]);
-
-/*
+router.post(
+  "/tickets",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN]), ticketController.create] /*
+   #swagger.tags = ['Tickets']
+   #swagger.security = [{
+    "bearerAuth":{}
+   }]
+   #swagger.requestBody = {
+    required:true,
+    schema:{
+      $ref: "#/components/schemas/CreateTicketRequest"
+    }
+   }
+   */,
+);
+router.get(
+  "/tickets",
+  ticketController.findAll,
+  /* 
+#swagger.tags = ['Tickets']
+*/
+);
+router.get(
+  "/tickets/:id",
+  ticketController.findOne,
+  /* 
+#swagger.tags = ['Tickets']
+*/
+);
+router.put(
+  "/tickets/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN]), ticketController.update],
+  /*
    #swagger.tags = ['Tickets']
    #swagger.security = [{
     "bearerAuth":{}
@@ -102,58 +122,24 @@ router.post("/tickets", [
     }
    }
    */
-
-router.get("/tickets", ticketController.findAll);
-
-/* 
-#swagger.tags = ['Tickets']
-*/
-
-router.get("/tickets/:id", ticketController.findOne);
-
-/* 
-#swagger.tags = ['Tickets']
-*/
-
-router.put("/tickets/:id", [
-  authMiddleware,
-  aclMiddleware([ROLES.ADMIN]),
-  ticketController.update,
-]);
-
-/*
-   #swagger.tags = ['Tickets']
-   #swagger.security = [{
-    "bearerAuth":{}
-   }]
-   #swagger.requestBody = {
-    required:true,
-    schema:{
-      $ref: "#/components/schemas/CreateTicketRequest"
-    }
-   }
-   */
-
-router.delete("/tickets/:id", [
-  authMiddleware,
-  aclMiddleware([ROLES.ADMIN]),
-  ticketController.remove,
-]);
-
-/*
+);
+router.delete(
+  "/tickets/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN]), ticketController.remove],
+  /*
   #swagger.tags = ['Banners']
   #swagger.security = [{
     "bearerAuth": {}
   }]
   */
-
-router.get("/tickets/:eventId/events", ticketController.findAllByEvent);
-
-/*
+);
+router.get(
+  "/tickets/:eventId/events",
+  ticketController.findAllByEvent,
+  /*
 #swagger.tags = ['Tickets']
 */
-
-/* CATEGORY*/
+);
 
 router.post(
   "/category",
@@ -172,7 +158,6 @@ router.post(
    }
    */
 );
-
 router.get(
   "/category",
   categoryController.findAll,
@@ -216,8 +201,6 @@ router.delete(
   }]
   */
 );
-
-/* EVENT*/
 
 router.post(
   "/events",
@@ -286,8 +269,6 @@ router.get(
   */
 );
 
-/* REGION*/
-
 router.get(
   "/regions",
   regionController.getAllProvinces,
@@ -330,8 +311,6 @@ router.get(
   #swagger.tags = ['Regions']
   */
 );
-
-/* MEDIA*/
 
 router.post("/media/upload-single", [
   authMiddleware,
